fix: dark mode colours

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -27,6 +27,6 @@ body {
   :root {
   --light: black;
   --blue: #7abdf7;
-  --dark: #fafdff; 
+  --dark: #C4E0F7; 
 }
 }
